--- a/dnb_tf/package.xml
+++ b/dnb_tf/package.xml
@@ -10,16 +10,8 @@
   <maintainer email="florian.eith@dragandbot.com">Florian Eith</maintainer>
 
 
-  <!-- One license tag required, multiple allowed, one license per tag -->
-  <!-- Commonly used license strings: -->
-  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>dragandbot GmbH</license>
-
-
-  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
-  <!-- Optional attribute type can be: website, bugtracker, or repository -->
-  <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/dnb_tf</url> -->
+  <license>Copyright drag and bot GmbH</license>
+  <url>https://www.dragandbot.com/</url>
 
 
   <!-- Author tags are optional, mutiple are allowed, one per tag -->
