--- a/dnb_tf/package.xml
+++ b/dnb_tf/package.xml
@@ -10,7 +10,7 @@
   <maintainer email="florian.eith@dragandbot.com">Florian Eith</maintainer>
 
 
-  <license>Copyright drag and bot GmbH</license>
+  <license>Apache 2</license>
   <url>https://www.dragandbot.com/</url>
 
 
