Added IEC Variable .msg

--- a/robot_movement_interface/CMakeLists.txt
+++ b/robot_movement_interface/CMakeLists.txt
@@ -22,6 +22,9 @@ add_message_files(
   DigitalIOValue.msg
   AnalogIOValue.msg
   IOGroupInfo.msg
+
+# KEBA PLC 
+  IECVariable.msg
 )
 
 add_service_files(
